renamed project and given basic bootstrap theme

--- a/src/entries/en/community/index.twig
+++ b/src/entries/en/community/index.twig
@@ -1,29 +1,32 @@
 <h1 id="main">Community</h1>
 <p>
 Most important part of any Open Source project is an active community.<br />
-On this page you'll find ways to get into touch with other Phrozn users and contributors. 
+On this page you'll find ways to get into touch with other Phrekyll users and contributors.
 </p>
 
+<!--
 <h2 id="irc-channel">IRC Channel</h2>
 <p>
-If you have any questions or suggestions, both on using and extending Phrozn,
-join us at <a href="irc://irc.freenode.net/#phrozn">#phrozn</a> channel on <a href="http://freenode.net">freenode.net</a>.
+If you have any questions or suggestions, both on using and extending Phrekyll,
+join us at <a href="irc://irc.freenode.net/#phrekyll">#phrekyll</a> channel on <a href="http://freenode.net">freenode.net</a>.
 
 Generally, IRC channel is your best bet when you seek quick answer/solution.
 </p>
+-->
 
 <h2 id="issue-tracker">Issue Tracker</h2>
 <p>
-To report problem, or suggest feature, please, use <a href="https://github.com/Pawka/phrozn/issues">issue tracker on github</a>.
+To report problem, or suggest feature, please, use <a href="https://github.com/lordelph/phrekyll/issues">issue tracker on github</a>.
 </p>
 
 <h2 id="twitter">Twitter Account</h2>
-<p>Project account: <a href="http://twitter.com/#!/phroznproject">@PhroznProject</a></p>
-<p>You can always contact me via my personal twitter account (<a href="http://twitter.com/Pawka">@Pawka</a>) as well.</p>
+<p>Project account: <a href="http://twitter.com/#!/phrekyllproject">@PhrekyllProject</a></p>
+<p>You can always contact me via my personal twitter account (<a href="http://twitter.com/lordelph">@lordelph</a>) as well.</p>
 
-<h2 id="how-to-contribute">Contribute to Phrozn</h2>
+<h2 id="how-to-contribute">Contribute to Phrekyll</h2>
 <p>
-Contributing to Phrozn is very easy - just <a href="https://github.com/Pawka/phrozn">fork the project</a> on github,
+Contributing to Phrekyll is very easy - just <a href="https://github.com/lordelph/phrekyll">fork the project</a> on github,
 work on your copy and send pull requests.<br />
-If you need assistance on comprehending Phrozn internals, just send me a message using twitter or IRC.
+If you need assistance on comprehending Phrekyll internals, log an issue in
+GitHub as it the answers may help others.
 </p>
