--- a/src/entries/en/documentation/front-matter.twig
+++ b/src/entries/en/documentation/front-matter.twig
@@ -56,7 +56,7 @@ permalink: /sub/section/
 
 <h2 id="custom-variables" class="in-toc">Custom Variables</h2>
 <p>
-Phrozn allows you to define your own data structures within front matter.
+Phrekyll allows you to define your own data structures within front matter.
 Once defined they are accessible via <code>this</code> container variable.
 </p>
 <p>Depending on text processor you rely on, the way you access <code>this</code> varies.
