--- a/src/entries/en/documentation/permalinks.twig
+++ b/src/entries/en/documentation/permalinks.twig
@@ -6,7 +6,7 @@ permalink: /en/documentation/permalinks/
 Currently there's only one permalink strategy implemented.
 </p>
 <p>
-However, Phrozn was designed in a way to allow any number of them - more info on this in successive releases.
+However, Phrekyll was designed in a way to allow any number of them - more info on this in successive releases.
 </p>
 
 <h2 id="parametrized">Parametrized Permalink</h2>
