--- a/src/entries/en/documentation/processors.twig
+++ b/src/entries/en/documentation/processors.twig
@@ -3,7 +3,7 @@ permalink: /en/documentation/processors/
 <h1 id="main">Supported markup processors</h1>
 
 <h2 id="core">Core Processors</h2>
-<p>Currently, Phrozn supports following formats:</p>
+<p>Currently, Phrekyll supports following formats:</p>
 <ul>
     <li><a href="http://www.twig-project.org/">Twig</a> Templates</li>
     <li><a href="http://lesscss.org/">LESS</a> Stylesheet Language</li>
@@ -13,10 +13,10 @@ permalink: /en/documentation/processors/
 <p>Please note that <a href="/en/documentation/articles/create-custom-processor/">creating your own processor</a> is really easy!</p>
 <h2 id="plugins">Contributed Plugin Processors</h2>
 <ul>
-    <li><a href="https://github.com/sasezaki/phrozn-plugin-HatenaSyntax">HatenaSyntax</a> by Kazusuke Sasezaki - Syntax used by Japanese <a
+    <li><a href="https://github.com/sasezaki/phrekyll-plugin-HatenaSyntax">HatenaSyntax</a> by Kazusuke Sasezaki - Syntax used by Japanese <a
         href="http://d.hatena.ne.jp/">diary service</a>.  </li>
 </ul>
 <p>
-If you created custom Phrozn processor, <a href="/en/community/">let me know</a>, so that your work is featured
+If you created custom Phrekyll processor, <a href="/en/community/">let me know</a>, so that your work is featured
 here.
 </p>
