--- a/src/entries/en/index.twig
+++ b/src/entries/en/index.twig
@@ -1,19 +1,21 @@
 layout: default.twig
 permalink: /en/
 ---
+<!--
 <div id="install"><a class="button" href="/en/installation/#composer">INSTALL ({{ phr.version }} {{ phr.stability|upper }})</a></div>
 <div>
-    <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="phroznproject">Tweet</a>
+    <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="phrekyllproject">Tweet</a>
 </div>
-
+-->
 <h1>Welcome!</h1>
 <p>
-Phrozn is static site generator written in PHP.
+    <img src="/media/img/logo.png" align="right">
+Phrekyll is static site generator written in PHP.
 </p>
 <p>The idea is very simple:</p>
 <p>
 You write text files in your favorite format (Textile, Markdown, Twig, Haml etc), in your favorite environment (Vim, Vim, or Vim
-etc), spice them with styles (again, in format of your choice - CSS, LESS, or SASS), feed all this to Phrozn, and it
+etc), spice them with styles (again, in format of your choice - CSS, LESS, or SASS), feed all this to Phrekyll, and it
 will create static HTML site ready to be published.
 </p>
 
@@ -24,16 +26,16 @@ will create static HTML site ready to be published.
     <li><b>Complete:</b> Supports input files in Twig, Textile, Markdown, and LESS format.</li>
     <li><b>Extensible:</b> <a href="/en/documentation/processors/">Supported text processors</a> are not enough for you?
         <a href="/en/documentation/articles/create-custom-processor/">Create your own</a> - it is really simple!</li>
-        <li><b>Easy to use:</b> Only <a href="/en/documentation/cli-phr/">couple of commands</a> to learn and you'll be able to use Phrozn efficiently in no time.</li>
-    <li><b>Modern:</b> No love for pre PHP 5.3 hosts, Phrozn <b>requires PHP 5.3+</b> and relies on it heavily.</li>
-    <li><b>Robust:</b> Phrozn is strictly tested. Check <a href="http://test.phrozn.info/">code coverage</a> and see for yourself!</li>
-    <li><b>Solid Foundation:</b> Whenever possible wheel reinvention was avoided. Phrozn uses code from
+        <li><b>Easy to use:</b> Only <a href="/en/documentation/cli-phr/">couple of commands</a> to learn and you'll be able to use Phrekyll efficiently in no time.</li>
+    <li><b>Modern:</b> No love for pre PHP 5.3 hosts, Phrekyll <b>requires PHP 5.3+</b> and relies on it heavily.</li>
+    <li><b>Robust:</b> Phrekyll is strictly tested. Check <a href="http://test.phrekyll.info/">code coverage</a> and see for yourself!</li>
+    <li><b>Solid Foundation:</b> Whenever possible wheel reinvention was avoided. Phrekyll uses code from
     well-written and well-known projects including <a href="http://pear.php.net/">PEAR</a>, <a href="http://zendframework.com/">Zend Framework 2</a>, <a
         href="http://symfony.com/">Symfony 2</a>, <a href="http://www.twig-project.org/">Twig</a>, <a
         href="http://www.pirum-project.org/">Pirum</a>.</li>
 </ul>
 
-<h2 id="why">Why Phrozn?</h2>
+<h2 id="why">Why Phrekyll?</h2>
 <p>
 For those who are new to static site generators, here is why you may want to use them:
 </p>
@@ -45,7 +47,7 @@ For those who are new to static site generators, here is why you may want to use
     site from any point in the past.</li>
     <li><b>Format Agnostic:</b> Enter text in your favorite format, in your favorite text editor.</li>
 </ul>
-<p>Ok, then again <b>why Phrozn</b>?</p>
+<p>Ok, then again <b>why Phrekyll</b>?</p>
 <ul>
     <li>Written in PHP, extensible in PHP.</li>
     <li>Exemplar of PHP 5.3 code.</li>
@@ -55,11 +57,11 @@ For those who are new to static site generators, here is why you may want to use
 
 <h2 id="alternatives">Alternatives</h2>
 <p>
-Phrozn is not the only generator in the block, but definitely the best one written in PHP :) <br />
+Phrekyll is derived from Phrozn, developed by Victor Farazdagi from 2011-2014
 </p>
 <p>
-Seriously, Phrozn was created because I couldn't find any decent static site generator in PHP. There
-are plenty of them written in Python and Ruby though, and I reviewed their source code when implementing Phrozn.
+Phrozn was created when Victor couldn't find any decent static site generator in PHP. There
+are plenty of them written in Python and Ruby though, and he reviewed their source code when implementing Phrekyll.
 </p>
 
 <p>So, on the shoulders of giants we stand:</p>
