--- a/src/entries/en/installation/index.twig
+++ b/src/entries/en/installation/index.twig
@@ -1,9 +1,9 @@
 <h1 id="installation">Installation</h1>
 <div class="toc-box">&nbsp;</div>
 
-<p>Depending on your purposes there are several ways to install Phrozn:</p>
+<p>Depending on your purposes there are several ways to install Phrekyll:</p>
 <p>
-If you plan to extend Phrozn it is suggested to
+If you plan to extend Phrekyll it is suggested to
 fork official repository, otherwise proceed with installation via <a href="http://getcomposer.org/">Composer</a>. Should you need raw sources,
 you can have them too.</p>
 
@@ -21,24 +21,24 @@ If you do not have Composer installed, install it first:
   curl -s https://getcomposer.org/installer | php
 </pre>
 <p>
-  Once Composer is installed, proceed with Phrozn installation:
+  Once Composer is installed, proceed with Phrekyll installation:
 </p>
 <pre>
-  php composer.phar create-project Pawka/phrozn phrozn && cd phrozn
+  php composer.phar create-project lordelph/phrekyll phrekyll && cd phrekyll
 </pre>
 
 <p>You can then symlink <code>phr</code> executable located in <code>bin</code> folder:</p>
 <pre>
-  sudo ln -s `pwd`/bin/phrozn.php /usr/local/bin/phr
+  sudo ln -s `pwd`/bin/phrekyll.php /usr/local/bin/phr
 </pre>
 
 <br />
 <p>That's it! Read <a href="/en/documentation/articles/getting-started/">Getting Started</a> guide for a quick start.</p>
 
 <h2 id="github-fork" class="in-toc">Fork on GitHub</h2>
-<p>Project's official repository is hosted on GitHub: <a href="http://github.com/Pawka/phrozn">http://github.com/Pawka/phrozn</a></p>
+<p>Project's official repository is hosted on GitHub: <a href="http://github.com/lordelph/phrekyll">http://github.com/lordelph/phrekyll</a></p>
 
 <h2 id="download" class="in-toc">Download Sources</h2>
 <p>Download "master" branch in
-<a href="http://github.com/Pawka/phrozn/tarball/master">.tar.gz</a> or in
-<a href="http://github.com/Pawka/phrozn/zipball/master">.zip</a> format.</p>
+<a href="http://github.com/lordelph/phrekyll/tarball/master">.tar.gz</a> or in
+<a href="http://github.com/lordelph/phrekyll/zipball/master">.zip</a> format.</p>
