--- a/src/entries/en/changelogs/all-logs.twig
+++ b/src/entries/en/changelogs/all-logs.twig
@@ -4,6 +4,20 @@ permalink: /en/changelogs/
 <p>To keep track on what has been introduced and when, below is a brief summary of version to version changes.
 </p>
 
+<h2 id="ver-0.9.0">ver 1.0.0</h2>
+<div style="float:right"><i>04 Apr, 2016</i></div>
+<ul>
+    <li>Forked from <a href="https://github.com/Pawka/phrozn">phrozn</a> and renamed</li>
+    <li>Internal fixes made to ensure tests pass</li>
+</ul>
+
+<hr>
+
+
+<h1>Phrozn Changelogs</h1>
+
+<p>Here is the history of the project prior to the Phrekyll fork...</p>
+
 <h2 id="ver-0.5.6">ver 0.5.6</h2>
 <div style="float:right"><i>04 Jan, 2014</i></div>
 <ul>
@@ -34,7 +48,7 @@ permalink: /en/changelogs/
 <div style="float:right"><i>19 Jan, 2013</i></div>
 <ul>
     <li>PHP 5.4 is now supported version</li>
-    <li>New command added: <a href="http://www.phrozn.info/en/documentation/cli-phr/#phr-single"><code>phr single</code></a> implemented by <a href="http://walterdalmut.com/">Walter Dal Mut</a>!</li>
+    <li>New command added: <a href="/en/documentation/cli-phr/#phr-single"><code>phr single</code></a> implemented by <a href="http://walterdalmut.com/">Walter Dal Mut</a>!</li>
 </ul>
 
 <h2 id="ver-0.5.1">ver 0.5.1</h2>
@@ -47,15 +61,15 @@ permalink: /en/changelogs/
 <div style="float:right"><i>18 Jan, 2013</i></div>
 <ul>
     <li>Moved to <a href="http://getcomposer.org/">Composer</a>.
-    Make sure you read the updated <a href="http://www.phrozn.info/en/installation/#composer">Installation Guide</a>.</li>
-    <li>Integrated with <a href="https://travis-ci.org/Pawka/phrozn">Travis CI</a></li>
+    Make sure you read the updated <a href="/en/installation/#composer">Installation Guide</a>.</li>
+    <li>Integrated with <a href="https://travis-ci.org/lordelph/phrekyll">Travis CI</a></li>
     <li>Huge thanks to <a href="http://twitter.com/#!/Pawka">Povilas Balzaravičius</a>!</li>
 </ul>
 
 <h2 id="ver-0.4.0">ver 0.4.0</h2>
 <div style="float:right"><i>20 Jan, 2012</i></div>
 <ul>
-    <li><a href="http://twitter.github.com/bootstrap/">Twitter's Bootstrap</a> used for default site (see <a href="http://sample.phrozn.info">sample</a>)</li>
+    <li><a href="http://twitter.github.com/bootstrap/">Twitter's Bootstrap</a> used for default site (see <a href="http://sample.phrekyll.info">sample</a>)</li>
     <li>Number of minor tweaks</li>
 </ul>
 
@@ -71,14 +85,14 @@ permalink: /en/changelogs/
 <h2 id="ver-0.2">ver 0.2</h2>
 <div style="float:right"><i>30 June, 2011</i></div>
 <ul>
-    <li><a href="http://www.phrozn.info/en/documentation/providers/">Content Providers</a> added</li>
+    <li><a href="/en/documentation/providers/">Content Providers</a> added</li>
     <li>
         Bundle support added (<a href="/en/documentation/cli-phr/#phr-bundle">phr bundle</a>).
-        You can <a href="/en/documentation/articles/create-phrozn-bundle/">create your own bundle</a> and contribute it back.
+        You can <a href="/en/documentation/articles/create-phrekyll-bundle/">create your own bundle</a> and contribute it back.
     </li>
-    <li>Phrozn <a href="https://github.com/Pawka/phrozn-bundles">Bundles repository</a> created for user-contributed bundles.</li>
+    <li>Phrekyll <a href="https://github.com/Pawka/phrozn-bundles">Bundles repository</a> created for user-contributed bundles.</li>
     <li>Better Front Matter extraction (bug fixed)</li>
-    <li>Phrozn started using <a href="http://phing.info">Phing</a> for managing bundle builds.</li>
+    <li>Phrekyll started using <a href="http://phing.info">Phing</a> for managing bundle builds.</li>
     <li>Table of Contents added to documentation pages (
         <a href="https://github.com/Pawka/phrozn-site/blob/master/scripts/default.js">implementation</a>)</li>
 </ul>
