--- a/src/entries/en/documentation/articles/deploy-using-git-post-update.twig
+++ b/src/entries/en/documentation/articles/deploy-using-git-post-update.twig
@@ -7,11 +7,11 @@ workflow.</p>
 <p>
 For easy site deployment we can use <code><a
         href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html#post-update">post-update</a></code> hook,
-which is executed on our remote production host everytime we push branches in our local/dev copy of Phrozn site.</p>
+which is executed on our remote production host everytime we push branches in our local/dev copy of Phrekyll site.</p>
 
 <p>The algorithm is simple:</p>
 <ol>
-    <li><span>Create a Git repository of your Phrozn project.</span></li>
+    <li><span>Create a Git repository of your Phrekyll project.</span></li>
     <li><span>Clone that repository on production host.</span></li>
     <li><span>Activate <code>post-update</code> hook on production host, it will be responsible for pulling/updating the
         site everytime something is pushed to project repository.</span></li>
