--- a/src/entries/en/documentation/articles/getting-started.twig
+++ b/src/entries/en/documentation/articles/getting-started.twig
@@ -4,28 +4,28 @@ permalink: /en/documentation/articles/getting-started/
 <div class="toc-box">&nbsp;</div>
 
 <p>
-    This guide should let you start with Phrozn in no time.
+    This guide should let you start with Phrekyll in no time.
 </p>
 
 <h2 id="install" class="in-toc">Installation</h2>
 <p>
-    Before you will be able to proceed, you need to install Phrozn. Please, make sure that you meet system requirements
+    Before you will be able to proceed, you need to install Phrekyll. Please, make sure that you meet system requirements
     outlined on <a href="/en/installation/">Installation</a> page.
 </p>
 
-<h2 id="create-new-project" class="in-toc">Your first Phrozn project</h2>
-<p>Let's create our first Phrozn project:</p>
+<h2 id="create-new-project" class="in-toc">Your first Phrekyll project</h2>
+<p>Let's create our first Phrekyll project:</p>
 <pre class="no-highlight">
 <span class="variable">$</span> <span class="command">mkdir</span> public_html
 <span class="variable">$</span> <span class="command">cd</span> public_html
 <span class="variable">$</span> <span class="command">phr init</span>
 </pre>
-<p>Here we create <code>public_html</code> folder and within it initialize our new Phrozn project. The output will look
+<p>Here we create <code>public_html</code> folder and within it initialize our new Phrekyll project. The output will look
 something like this:</p>
 <pre class="no-highlight">
 Initializing new project
 
-  Project path: ./public_html/.phrozn/
+  Project path: ./public_html/.phrekyll/
   [<span class="string">ADDED</span>]   config.yml
   [<span class="string">ADDED</span>]   entries/index.twig
   [<span class="string">ADDED</span>]   scripts/default.js
@@ -37,7 +37,7 @@ Initializing new project
   [<span class="string">ADDED</span>]   layouts/default.twig
 </pre>
 <p>
-All those files/directories are created in <code>public_html/.phrozn</code> folder.
+All those files/directories are created in <code>public_html/.phrekyll</code> folder.
 </p>
 <table>
     <tr>
@@ -83,10 +83,10 @@ All those files/directories are created in <code>public_html/.phrozn</code> fold
 You can skip this step and jump to <a href="/en/documentation/articles/getting-started/#project-compilation">Site
 Compilation</a> immediately. Then once you have static site compiled and
 want to tweak it more - get back and read this section.<br /><br />
-For those of you who want to see the output immediately, sample site has been created: <a target="_blank" href="http://sample.phrozn.info">sample.phrozn.info</a>.
+For those of you who want to see the output immediately, sample site has been created: <a target="_blank" href="http://sample.phrekyll.info">sample.phrekyll.info</a>.
 </p>
 <p>
-First of all, let's start with creating our main layout file, <code>.phrozn/layouts/main.twig</code>
+First of all, let's start with creating our main layout file, <code>.phrekyll/layouts/main.twig</code>
 </p>
 <pre class="html">
 &lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01//EN&quot;&gt;
@@ -107,23 +107,23 @@ The only special thing here is <code>{{ '{{' }}content{{ '}}'}}</code> place-hol
 where entry's content is to be injected into layout.
 </p>
 <p>
-Phrozn comes with default layout, called (surprize!!) <code>default.twig</code>, and it is probably more common to
+Phrekyll comes with default layout, called (surprize!!) <code>default.twig</code>, and it is probably more common to
 edit it than to create new layout, but for purposes of demonstration, let's proceed with newly created layout
 <code>main.twig</code>.
 </p>
 
 <p>
 In order to have client-side scripts or styles parsed and compiled into <code>scripts</code> and <code>styles</code>
-folders respectively all you need to do is to add them into <code>.phrozn/scripts</code> and
-<code>.phrozn/styles</code>. Right now, all JavaScript code is passed without modification, minifying
+folders respectively all you need to do is to add them into <code>.phrekyll/scripts</code> and
+<code>.phrekyll/styles</code>. Right now, all JavaScript code is passed without modification, minifying
 processors already planned. When it comes to styles you can add them in CSS or LESS format (use "css" and "less" extensions
 to distinguish between two).
 </p>
 
 <p>
-Now, it is time to create our first entry. All entries go to folder <code>.phrozn/entries</code> and you can have multi-level
+Now, it is time to create our first entry. All entries go to folder <code>.phrekyll/entries</code> and you can have multi-level
 directory hierarchies which (depending on your settings) can be preserved in your static site. Source of
-<code>.phrozn/entries/test.twig</code>:
+<code>.phrekyll/entries/test.twig</code>:
 </p>
 <pre>
 layout: main.twig
@@ -132,21 +132,21 @@ layout: main.twig
 </pre>
 
 <p>Entry above is in Twig format (see "twig" extension") but can be in Markdown or Textile. Just change the extension
-of entry file (twig, textile, markdown etc), and Phrozn will apply respective processor.
+of entry file (twig, textile, markdown etc), and Phrekyll will apply respective processor.
 As mentioned before, you can have your own formats as well
 - see documentation on <a href="/en/documentation/articles/create-custom-processor/">creation of custom text processors.</a>
 </p>
 <p>
 Now let's review front matter.
 <code>layout</code> setting is completely optional, it defaults to <code>default.twig</code>, which means
-<code>.phrozn/layouts/default.twig</code> is to be used as layout file. Since we created our custom layout file, we set
+<code>.phrekyll/layouts/default.twig</code> is to be used as layout file. Since we created our custom layout file, we set
 this option to <code>main.twig</code>.
 </p>
 
 
 <h2 id="project-compilation" class="in-toc">Compile your project</h2>
 <p>
-Now, time to have phrozn version of our project!
+Now, time to have phrekyll version of our project!
 </p>
 <pre class="no-highlight">
 <span class="variable">$</span> <span class="command">cd</span> public_html
@@ -156,13 +156,13 @@ Now, time to have phrozn version of our project!
 <pre class="no-highlight">
 Starting static site compilation.
 
-  [<span class="string">OK</span>]      Source directory located: /tmp/public_html/.phrozn/
+  [<span class="string">OK</span>]      Source directory located: /tmp/public_html/.phrekyll/
   [<span class="string">OK</span>]      Destination directory located: /tmp/public_html/
-  [<span class="string">OK</span>]      ./.phrozn/entries/test.twig parsed
+  [<span class="string">OK</span>]      ./.phrekyll/entries/test.twig parsed
   [<span class="string">OK</span>]      ./test.html written
-  [<span class="string">OK</span>]      ./.phrozn/styles/default.less parsed
+  [<span class="string">OK</span>]      ./.phrekyll/styles/default.less parsed
   [<span class="string">OK</span>]      ./styles/default.css written
-  [<span class="string">OK</span>]      ./.phrozn/scripts/default.js parsed
+  [<span class="string">OK</span>]      ./.phrekyll/scripts/default.js parsed
   [<span class="string">OK</span>]      ./scripts/default.js written
   [<span class="string">OK</span>]      ./media/README copied
   [<span class="string">OK</span>]      ./media/img/README copied
@@ -172,7 +172,7 @@ If <code>public_html</code> is exposed as some web address, say as <code>http://
 created page <code>test.html</code> is available at <code>http://www.domain.com/test.html</code>.
 </p>
 <p>
-If you want to have more readable URLs, just update <code>.phrozn/entries/test.twig</code>, to include permalink
+If you want to have more readable URLs, just update <code>.phrekyll/entries/test.twig</code>, to include permalink
 setting:
 </p>
 <pre>
@@ -197,7 +197,7 @@ There are number of <a href="/en/documentation/front-matter/">other options</a> 
 <h2 id="project-update" class="in-toc">Keep your project up to date</h2>
 <p>
 In order to update your project, all you need to do is call <code>phr up</code>
-command. By default, all output files are written into directory containing <code>.phrozn</code> folder, in our case to
+command. By default, all output files are written into directory containing <code>.phrekyll</code> folder, in our case to
 <code>public_html</code>:
 </p>
 <pre class="no-highlight">
@@ -216,7 +216,7 @@ command:
 <span class="variable">$</span> <span class="command">phr clobber</span>
 Purging project data..
 
-Located project folder: /tmp/public_html/.phrozn/
+Located project folder: /tmp/public_html/.phrekyll/
 Project folder is to be removed.
 This operation <span class="variable">CAN NOT</span> be undone.
 
@@ -224,7 +224,7 @@ Type 'yes' to continue:
 </pre>
 
 <p>Make sure you double check the folder to be purged before typing <code>yes</code>!</p>
-<p>Only project folder <code>.phrozn</code> will be removed, your generated content will stay intact.</p>
+<p>Only project folder <code>.phrekyll</code> will be removed, your generated content will stay intact.</p>
 <h2 id="summary" class="in-toc">Summary</h2>
 <p>Let's summarize what you have learned so far.</p>
 
@@ -238,4 +238,4 @@ Should you create project by mistake, it's always simple to purge it with <code>
 <code>phr init</code>.
 </p>
 
-<p>Need some samples? Check out git repository of <a href="http://github.com/Pawka/phrozn-site">Phrozn's own site</a>.</p>
+<p>Need some samples? Check out git repository of <a href="https://github.com/lordelph/phrekyll/tree/gh-pages">Phrekyll's own site</a>.</p>
