--- a/src/entries/en/documentation/index.twig
+++ b/src/entries/en/documentation/index.twig
@@ -2,8 +2,8 @@
 
 <h2 id="core">Core Docs</h2>
 <ul>
-    <li><a href="/en/documentation/articles/getting-started/">Getting started with Phrozn</a></li>
-    <li><a href="/en/documentation/cli-phr/">Phrozn CLI reference</a></li>
+    <li><a href="/en/documentation/articles/getting-started/">Getting started with Phrekyll</a></li>
+    <li><a href="/en/documentation/cli-phr/">Phrekyll CLI reference</a></li>
     <li><a href="/en/documentation/front-matter/">Front matter format</a></li>
     <li><a href="/en/documentation/site-config/">Site configuration</a></li>
     <li><a href="/en/documentation/processors/">Text Processors</a></li>
@@ -15,10 +15,10 @@
 <h2 id="articles">Articles</h2>
 <ul>
 {#
-    <li><a href="/en/documentation/articles/deploy-using-git-post-update/">Deploy Phrozn site using git's post-update hook</a></li>
+    <li><a href="/en/documentation/articles/deploy-using-git-post-update/">Deploy Phrekyll site using git's post-update hook</a></li>
 #}
     <li><a href="/en/documentation/articles/create-custom-processor/">Create custom markup processor</a></li>
-    <li><a href="/en/documentation/articles/create-phrozn-bundle/">Create Phrozn bundle</a></li>
+    <li><a href="/en/documentation/articles/create-phrekyll-bundle/">Create Phrekyll bundle</a></li>
 </ul>
 <h2 id="misc">Misc</h2>
 <ul>
