--- a/src/entries/en/documentation/site-config.twig
+++ b/src/entries/en/documentation/site-config.twig
@@ -5,7 +5,7 @@ permalink: /en/documentation/site-config/
 <div class="toc-box">&nbsp;</div>
 
 <p>You can configure how your particular entries are parsed and compiled into static html pages
-via <a href="/en/documentation/front-matter/">YAML Front Matter</a>. Additionally, Phrozn allows you to specify global options in
+via <a href="/en/documentation/front-matter/">YAML Front Matter</a>. Additionally, Phrekyll allows you to specify global options in
 <code>config.yml</code> (which is automatically created on <code>phr init</code>).</p>
 
 <h2 id="variables" class="in-toc">Variables</h2>
@@ -29,7 +29,7 @@ via <a href="/en/documentation/front-matter/">YAML Front Matter</a>. Additionall
 </table>
 
 <h2 id="default-config" class="in-toc">Default config.yml</h2>
-<p>By default, Phrozn generates following configuration file:</p>
+<p>By default, Phrekyll generates following configuration file:</p>
 <pre>
 ---&nbsp;# Site configuration
 entries:
