--- a/skeleton/layouts/topbar.twig
+++ b/skeleton/layouts/topbar.twig
@@ -5,7 +5,7 @@
             <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="about">About</a></li>
-                <li><a href="http://www.phrekyll.info/en/documentation/">Documentation</a></li>
+                <li><a href="http://phrekyll.dixo.net/en/documentation/">Documentation</a></li>
             </ul>
             <form action="http://www.google.ru/search?ie=UTF-8&" method="GET">
                 <input type="text" placeholder="Search" name="q" value="phrekyll">
