updated installation page

--- a/src/entries/en/documentation/processors.twig
+++ b/src/entries/en/documentation/processors.twig
@@ -11,9 +11,11 @@ permalink: /en/documentation/processors/
     <li><a href="http://en.wikipedia.org/wiki/Textile_%28markup_language%29">Textile</a></li>
 </ul>
 <p>Please note that <a href="/en/documentation/articles/create-custom-processor/">creating your own processor</a> is really easy!</p>
-<h2 id="plugins">Contributed Plugin Processors</h2>
+<h2 id="plugins">Contributed Phrozn Plugin Processors</h2>
+<p>These processors were created for the phrozn project from which this was
+	forked, and may work with modification</p>
 <ul>
-    <li><a href="https://github.com/sasezaki/phrekyll-plugin-HatenaSyntax">HatenaSyntax</a> by Kazusuke Sasezaki - Syntax used by Japanese <a
+    <li><a href="https://github.com/sasezaki/phrozn-plugin-HatenaSyntax">HatenaSyntax</a> by Kazusuke Sasezaki - Syntax used by Japanese <a
         href="http://d.hatena.ne.jp/">diary service</a>.  </li>
 </ul>
 <p>
